# blazing-gil

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  main.cpp
cmake/: blazing-gilConfig.cmake  blazing-gilConfig.cmake.in
doc/: doxyfile
example/: CMakeLists.txt  anisotropic_diffusion.cpp  bilinear_interpolation_scaling.cpp  diffusion_properties.cpp  harris.cpp  hessian.cpp  hough_circle_transform.cpp  hough_line_transform.cpp  lanczos_scaling.cpp  matrix_channeled.cpp  nearest_neighbor_scaling.cpp  padding.cpp  sobel_gradient.cpp  test_blaze.cpp
include/: convolution.hpp  core.hpp  numeric.hpp  scaling.hpp
include/flash/: convolution.hpp  core.hpp  numeric.hpp  pixel_compat.hpp  scaling.hpp
test/: CMakeLists.txt  as_matrix_channeled_test.cpp  as_matrix_test.cpp  channelwise_reduce_test.cpp  from_matrix_test.cpp  pad_test.cpp  pixel_compat_test.cpp  pixel_to_vector_test.cpp  pixel_vector_test.cpp  remap_test.cpp  rm_cvref_test.cpp  to_image_test.cpp  to_matrix_channeled_test.cpp  to_matrix_test.cpp  true_channel_type_test.cpp  vector_to_pixel_test.cpp
